feat: get album tracks route docs and controller
