# backend/routes/albums.js
@@ -204,6 +204,8 @@ router.get(
       .trim()
       .notEmpty()
       .withMessage('Values of id cannot be empty')
+      .isInt({ min: 1 })
+      .withMessage('Expects an integer > 0')
       .escape(),
     query('artist_id.*')
       .trim()
@@ -300,6 +302,145 @@ router.get(
 );
 
 // tracks route
+/**
+ * @openapi
+ * /albums/tracks:
+ *   get:
+ *     tags:
+ *       - Album tracks
+ *     summary: Get tracks in an album
+ *     description: |
+ *       Get the tracks in an album, specified by the
+ *       `id` parameter.
+ *     operandId: getAlbumTracks
+ *     parameters:
+ *       - in: query
+ *         name: format
+ *         description: The way to format the response data body
+ *         schema:
+ *           $ref: '#/components/schemas/format'
+ *       - in: query
+ *         name: page
+ *         description: The page number to return
+ *         schema:
+ *           $ref: '#/components/schemas/page'
+ *       - in: query
+ *         name: page_size
+ *         description: The number of items in a single result list
+ *         schema:
+ *           $ref: '#/components/schemas/page_size'
+ *       - in: query
+ *         name: order_by
+ *         description: |
+ *           Sets the field by which to sorts results. You can specify
+ *           if it should be `ascending` or `descending` by
+ *           adding `_asc` or `_desc` respectively to the `order_by`
+ *           value. The default is ascending order.
+ *           Supported fields to sort by are : `name`, `id`,
+ *           `releasedate`, `artist_id`, `artist_name`, `track_id`
+ *           `popularity_total`, `popularity_month`, `track_name`,
+ *           `popularity_week` and `track_position`.
+ *         schema:
+ *           $ref: '#/components/schemas/order_by'
+ *         examples:
+ *           example1:
+ *             summary: using default asc order
+ *             value: order=popularity_month
+ *           example2:
+ *             summary: explicitly specifying ascending order
+ *             value: order=popularity_month_asc
+ *           example3:
+ *             summary: explicitly specifying descending order
+ *             value: order=popularity_month_desc
+ *       - in: query
+ *         name: full_count
+ *         description: |
+ *           Sets the 'results_fullcount' value in the results data
+ *           'headers' to the total number results(albums) in the
+ *           database. Useful for pagination purposes.
+ *         schema:
+ *           $ref: '#/components/schemas/results_full_count'
+ *       - in: query
+ *         name: id
+ *         description: A list of one or more album IDs
+ *         schema:
+ *           $ref: '#/components/schemas/AlbumIds'
+ *         required: true
+ *       - in: query
+ *         name: name
+ *         description: An album name
+ *         schema:
+ *           type: string
+ *       - in: query
+ *         name: artist_id
+ *         description: |
+ *           A list of one or more artist IDs who created
+ *           the album
+ *         schema:
+ *           $ref: '#/components/schemas/ArtistIds'
+ *         example: '104336'
+ *       - in: query
+ *         name: artist_name
+ *         description: Name of the artist who owns the album
+ *         schema:
+ *           type: string
+ *       - in: query
+ *         name: date_between
+ *         description: |
+ *           A filter of results based on a starting and
+ *           ending date, separated by an underscore(_). Both dates
+ *           must be in the format 'yyyy-mm-dd'
+ *         schema:
+ *           $ref: '#/components/schemas/date_between'
+ *       - in: query
+ *         name: image_size
+ *         description: |
+ *           The size of the cover of the returned resource.
+ *           A size of n returns the 'nxn-sized' cover image.
+ *         schema:
+ *           $ref: '#/components/schemas/image_size'
+ *       - in: query
+ *         name: audio_format
+ *         description: |
+ *           The audio format you wish to use on the `audio`
+ *           returned field - that is the format of the returned
+ *           track file at that link. Currently, only `mp31` (96kbs),
+ *           `mp32` (VBR, good quality), `ogg` and `flac` are
+ *           supported. The default is `mp31`.
+ *         schema:
+ *           $ref: '#/components/schemas/album_audio_format'
+ *       - in: query
+ *         name: track_id
+ *         description: |
+ *           An array of one or more track IDs to return in the album.
+ *         schema:
+ *           $ref: '#/components/schemas/TrackIds'
+ *       - in: query
+ *         name: track_name
+ *         description: A track's name
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: results were found based on passed parameters
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/ResponseData'
+ *       404:
+ *         description: no results were found based on parameters
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 status: failed
+ *                 code: 404
+ *                 error_message: some message
+ *                 'x-took': xyms
+ *       400:
+ *         description: some error in request parameters or path
+ */
 router.get(
   '/tracks',
   [
@@ -327,7 +468,7 @@ router.get(
       .isIn(['json', 'jsonpretty'])
       .withMessage('Expects json or jsonpretty')
       .escape(),
-    query(['artist_id', 'id', 'order_by'])
+    query(['artist_id', 'order_by', 'track_id'])
       .optional()
       .trim()
       .notEmpty()
@@ -365,16 +506,20 @@ router.get(
       .isBoolean()
       .withMessage('Expects boolean: true or false')
       .escape(),
-    query('id.*')
+    query('id')
+      .trim()
+      .isArray()
+      .withMessage('Expects an array')
+      .notEmpty()
+      .escape(),
+    query(['id.*', 'track_id.*', 'artist_id.*'])
       .trim()
       .notEmpty()
       .withMessage('Values of id cannot be empty')
       .escape(),
-    query('artist_id.*')
-      .trim()
-      .notEmpty()
-      .withMessage('Values of artist_id cannot be empty')
-      .escape(),
+    query('id.*')
+      .isInt({ min: 1 })
+      .withMessage('Expects an integer > 0'),
     query([
       'artist_name', 'audio_format', 'name',
       'date_between', 'image_size', 'track_name',
